--- a/index.html
+++ b/index.html
@@ -15,26 +15,56 @@
   <body>
     <main>
       <div class="container">
-        <div class="card">
-          <h1>SEDANS</h1>
-          <p>
-            Choose a sedan for its affordability and excellent fuel economy.
-            Ideal for cruising in the city or on your next road trip.
-          </p>
+        <div class="card orange">
+          <div class="icon">
+            <img src="./images/icon-sedans.svg" alt="Sedan car icon" />
+          </div>
+          <div class="title">
+            <h1>SEDANS</h1>
+          </div>
+          <div class="content">
+            <p>
+              Choose a sedan for its affordability and excellent fuel economy.
+              Ideal for cruising in the city or on your next road trip.
+            </p>
+          </div>
+          <div class="btn-container">
+            <button>Learn More</button>
+          </div>
         </div>
-        <div class="card">
-          <h1>SUVS</h1>
-          <p>
-            Take an SUV for its spacious interior, power, and versatility.
-            Perfect for your next family vacation and off-road adventures.
-          </p>
+        <div class="card cyan">
+          <div class="icon">
+            <img src="./images/icon-suvs.svg" alt="SUV car icon" />
+          </div>
+          <div class="title">
+            <h1>SUVS</h1>
+          </div>
+          <div class="content">
+            <p>
+              Take an SUV for its spacious interior, power, and versatility.
+              Perfect for your next family vacation and off-road adventures.
+            </p>
+          </div>
+          <div class="btn-container">
+            <button>Learn More</button>
+          </div>
         </div>
-        <div class="card">
-          <h1>LUXURY</h1>
-          <p>
-            Cruise in the best car brands without the bloated prices. Enjoy the
-            enhanced comfort of a luxury rental and arrive in style.
-          </p>
+        <div class="card dark-cyan">
+          <div class="icon">
+            <img src="./images/icon-luxury.svg" alt="Luxury car icon" />
+          </div>
+          <div class="title">
+            <h1>LUXURY</h1>
+          </div>
+          <div class="content">
+            <p>
+              Cruise in the best car brands without the bloated prices. Enjoy
+              the enhanced comfort of a luxury rental and arrive in style.
+            </p>
+          </div>
+          <div class="btn-container">
+            <button>Learn More</button>
+          </div>
         </div>
       </div>
     </main>
