--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Madeleine Woodbury</a>.
+      >. Coded by
+      <a href="https://github.com/madeleinewoodbury" target="_blank"
+        >Madeleine Woodbury</a
+      >.
     </footer>
   </body>
 </html>
